# spacecrafter-data

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  HACKING  INSTALL  README  install_data.sh
data/: CMakeLists.txt
data/audio/: CMakeLists.txt
data/fonts/: CMakeLists.txt
data/ftp/: CMakeLists.txt
data/ftp/pub/: CMakeLists.txt
data/landscapes/: CMakeLists.txt
data/language/: CMakeLists.txt  af.txt  ar.txt  az.txt  be.txt  bg.txt  bn.txt  br.txt  ca.txt  cs.txt  cy.txt  da.txt  de.txt  el.txt  en.txt  en_AU.txt  en_GB.txt  eo.txt  es.txt  et.txt  eu.txt  fa.txt  fi.txt  fil.txt  fr.txt  ga.txt  gl.txt  haw.txt  he.txt  hr.txt  hu.txt  hy.txt  id.txt  is.txt  it.txt  ja.txt  ka.txt  kn.txt  ko.txt  lt.txt  (+28 more)
data/model3D/: CMakeLists.txt  MilkyWay.ojm
data/model3D/Asteroid_2/: CMakeLists.txt
data/model3D/Deimos/: CMakeLists.txt  Deimos_1L.ojm  Deimos_2M.ojm  Deimos_3H.ojm
data/model3D/Phobos/: CMakeLists.txt  Phobos_1L.ojm  Phobos_2M.ojm  Phobos_3H.ojm
data/model3D/Sphere/: CMakeLists.txt  Sphere_1L.ojm  Sphere_2M.ojm  Sphere_3H.ojm
data/scripts/: CMakeLists.txt
data/scripts/basis/: 99jingle_bells.sts  CMakeLists.txt
data/scripts/basis/christmas/: CMakeLists.txt
data/scripts/custom/: CMakeLists.txt
data/scripts/deepsky/: CMakeLists.txt  crux_flag.sts
data/scripts/deepsky/australia/: CMakeLists.txt
data/scripts/fscripts/: 02.sts  06.sts  10.sts  13.sts  17.sts  CMakeLists.txt  F01.sts  F02.sts  F03.sts  F04.sts  F05.sts  F06.sts  F07.sts  F08.sts  F09.sts  F10.sts  F11.sts  F12.sts  F13.sts  F14.sts  F15.sts  F16.sts  F17.sts  F18.sts  F19.sts  F20.sts  F21.sts  F22.sts  F23.sts  F24.sts  K0.sts  K1.sts  K2.sts  K4.sts  K5.sts  K6.sts  K8.sts  K9.sts  M00.sts  M01.sts  (+43 more)
data/scripts/fscripts/day_earth/: CMakeLists.txt
data/scripts/fscripts/milkyways/: CMakeLists.txt
data/scripts/fscripts/panoramas/: CMakeLists.txt
data/scripts/internal/: .directory  CMakeLists.txt  antipodes.sts  asterism_all.fab  big_planets.sts  bodies-asteroids-501ex.sts  bodies-kuiper.sts  chut.sts  clear_mess.sts  comet.sts  date_shift_minus.sts  date_shift_plus.sts  deepsky_drawings.sts  dm_record.sts  ecliptic_poles.sts  equator_poles.sts  fly_to_selected.sts  greenwich_line.sts  initial.sts  initialVR360.sts  initial_dawn.sts  initial_night.sts  milkyway.sts  mire.sts  orange_fog.sts  panorama2.sts  panorama3.sts  panorama5.sts  personal.sts  personal.txt  personasterism.sts  planets_gotoex3mode.sts  polaris.sts  proper_demotion.sts  proper_motion.sts  shift_clock.sts  sky_culture1.sts  sky_culture2.sts  sky_culture3.sts  sky_culture4.sts  (+8 more)
data/scripts/internal/asteroids/: CMakeLists.txt
data/scripts/internal/deepsky_drawings/: CMakeLists.txt
data/scripts/internal/milkyways/: CMakeLists.txt
data/scripts/internal/panoramas/: CMakeLists.txt
data/scripts/internal/planetex/: CMakeLists.txt
data/scripts/navigation/: CMakeLists.txt  titanic.sts
data/scripts/navigation/titanic/: CMakeLists.txt
data/scripts/planets/: 05_jupiter.sts  CMakeLists.txt
data/scripts/planets/jupiter/: CMakeLists.txt
data/scripts/shows/: CMakeLists.txt  pulsars.sts
data/scripts/shows/pulsars/: CMakeLists.txt
data/sky_cultures/: CMakeLists.txt
data/sky_cultures/aztec/: CMakeLists.txt  constellationsart.fab  constellationship.fab  description.en.utf8  description.es.utf8  info.ini
data/sky_cultures/chinese/: CMakeLists.txt
data/sky_cultures/hindu/: CMakeLists.txt  constellation_names.eng.fab  constellationsart.fab  constellationship.fab  info.ini  star_names.fab
data/sky_cultures/inca/: CMakeLists.txt  constellation_names.eng.fab  constellationsart.fab  constellationship.fab  info.ini
data/sky_cultures/inuit/: CMakeLists.txt
data/sky_cultures/western-asterisms/: Thumbs.db  constellation_names.eng.fab  constellationsart.fab  constellationship.fab  info.ini  star_names-fun.fab  star_names.fab
data/sky_cultures/western-color/: .liste.kate-swp  CMakeLists.txt  constellationsart.fab  constellationship.fab  info.ini
data/sky_cultures/western-hevelius/: .directory  CMakeLists.txt  constellation_names.eng.fab  constellationsart.fab  constellationship.fab  description.en.utf8  info.ini
data/videos/: 05.avi  CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES  POTFILES.in  af.po  ar.po  az.po  be.po  bg.po  bn.po  br.po  ca.po  convertPOs.sh  cs.po  cy.po  da.po  de.po  dv.po  el.po  en.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gl.po  gu.po  haw.po  he.po  hr.po  hu.po  hy.po  id.po  (+37 more)
stars/: CMakeLists.txt  stars.ini  stars_0_0v0_5.cat  stars_1_0v0_5.cat
textures/: CMakeLists.txt
textures/bodies/: CMakeLists.txt
textures/nebulae/: CMakeLists.txt
textures/splash/: CMakeLists.txt
