add_subdirectory(audio)
add_subdirectory(fonts)
add_subdirectory(landscapes)
add_subdirectory(videos)
add_subdirectory(sky_cultures)
add_subdirectory(scripts)
add_subdirectory(ftp)
add_subdirectory(model3D)
add_subdirectory(language)


########### install files ###############

INSTALL(FILES icon.bmp DESTINATION share/${PACKAGE}/data)

