add_subdirectory(bodies)
add_subdirectory(nebulae)
add_subdirectory(splash)


########### install files ###############

INSTALL(FILES city.png halo.png planethalo.png big_halo.png milkyway.png pointer_star.png pointer_planet.png pointer_nebula.png pointer_illuminate.png pointer1.png star16x16.png fog.png tex_nebulaes.png star_illuminate.png DESTINATION share/${PACKAGE}/textures)

