
########### install files ###############

INSTALL(FILES amalthea.png ariel.png asteroid.png callisto.png deimos.png dione.png earth_cloud.png earth_day.png earthmap.png earth_night.png earth_norm_cloud.png earth_specular.png eclipse_map.png enceladus.png europa.png ganymede.png generic.png hyperion.png iapetus.png io.png jupiter.png mars.png mercury.png mimas.png miranda.png moon_normal.png moon.png neptune.png nomap.png oberon.png phobos.png pluto.png proteus.png rhea.png saturn.png saturn_rings_radial.png sun.png tethys.png titania.png titan.png triton.png umbriel.png uranus.png uranusring.png venus.png earth_day.jpg earth_night.jpg earth_norm_cloud.jpg earth_specular.jpg makemake.jpg venus_surface.png DESTINATION share/${PACKAGE}/textures/bodies)

