########### install files ###############

INSTALL(FILES aztec0.png citlaltlachtli.png citlaltlachtli_t.png colotlixayac_image.png colotlixayac.png colotlixayac_t.png constellation_names.eng.fab constellationsart.fab constellationship.fab description.en.utf8 description.es.utf8 edificios.png info.ini mamalhuaztli_image.png mamalhuaztli.png mamalhuaztli_t.png nanahuatzin.png Primeros_Memoriales.png tianquiztli.png Tianquiztli_T.png tiaquitztli_image.png xonecuilli_Glifo.png xonecuilli.png xonecuilli_t.png DESTINATION share/${PACKAGE}/data/sky_cultures/aztec)

