########### install files ###############

INSTALL(FILES constellation_names.eng.fab constellationship.fab constellationsart.fab info.ini star_names.fab anu.png ard.png asl.png awn.png brn.png chi.png dhruv.png dnt.png hst.png jst.png kaal1.png krk.png mgh.png mrg.png mula.png pad.png pbp.png pnv.png pph.png psy.png rev.png rhn1.png saptrishi.png shw.png srv.png stb.png swt.png ubp.png uph.png usd.png vis.png DESTINATION share/${PACKAGE}/data/sky_cultures/hindu)

