########### install files ###############

INSTALL(FILES constellation_names.eng.fab constellationsart.fab constellationship.fab info.ini blubber-container.png breastbone.png caribou.png collarbones.png dogs.png lamp-stand.png runners.png the-one-behind.png two-in-front.png two-placed-far-apart.png two-sunbeams.png DESTINATION share/${PACKAGE}/data/sky_cultures/inuit)

