
########### install files ###############

INSTALL(FILES aristoteFE.png cadeau1.png cadeau2.png cadeau3.png cadeau4.png cadeau5.png copernicFE.png grelots.ogg jingle-bells.ogg maison-neige.png neige-allg.png neige-all.png neige-gros.png neige-moyen.png neige-petit.png noel_plane.png sapin.png snow-flake.png snowground2FE.png snowman.png traineau.png DESTINATION share/${PACKAGE}/data/scripts/basis/christmas)

