
########### install files ###############

INSTALL(FILES mw00.png mw00e.png mw01.png mw02.png mw03.png mw04.png mw05.png mw06.png mw07.png mw08.png mw09.png mw10.png mw11.png mw12.png mw13.png mw14.png mw15.png mw16.png mw17.png mw18.png mw19.png mw20.png DESTINATION share/${PACKAGE}/data/scripts/fscripts/milkyways)

