
########### install files ###############

INSTALL(FILES asteroid.png comet.png star16x16.png comet_halo.png jupiter.png mars.png mercure.png neptune.png satrings.png saturne.png saturn_rings_radial.png soleil.png terre.png uranus.png venus.png DESTINATION share/${PACKAGE}/data/scripts/internal/planetex)

