
########### install files ###############

INSTALL(FILES cambridge.png chanson_pulsar1.ogg chanson_pulsar2.ogg chanson_pulsar3.ogg chanson_pulsar4.ogg chanson_pulsar5.ogg chanson_pulsar6.ogg lion.png peintre.png persee.png PSR_B0329+54.ogg PSR_J0437-4715.ogg PSR_J0534+2200.ogg PSR_J0834-4511.ogg PSR_J0953+0755.ogg PSR_J1939+2134.ogg pulsar_crabe_ralenti.ogg pulsar.png pulsar_voiles_ralenti.ogg renard.png taureau.png titre_pulsars.png verylargearray.png voiles.png  DESTINATION share/${PACKAGE}/data/scripts/shows/pulsars)

